# is_subscribed

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  main.py
app/routers/: is_user_subscribed.py
app/schemas/: request.py
app/services/: telegram.py
tests/: test_subscription.py
